--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,11 @@
       <artifactId>webdriver-factory</artifactId>
       <version>1.1.46</version>
     </dependency>
+	<dependency>
+	<groupId>org.json</groupId>
+	<artifactId>json</artifactId>
+	<version>20140107</version>
+    </dependency>
   </dependencies>
   <build>
     <resources>
