--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 user.username=${user.username}
 user.password=${user.password}
 
-grid2.hub=${grid2.hub}
+grid2.hub=
 
 site.url=http://localhost:8080/auth/login
 
